Scrollbar Bug Fixed

--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 html,body{
     background-color: rgba(255, 255, 255, 0.815);
     overflow-x: hidden;
-    overflow-y: hidden;
 }
-html:hover{
-    overflow-y:scroll;
-}
+
 .top{
     position: relative;
     margin:0 auto;
